Fix route hierarchy and hero spacing

--- a/src/app/pages/loading-states/loading-states.component.scss
+++ b/src/app/pages/loading-states/loading-states.component.scss
@@ -9,7 +9,7 @@ mat-list {
     border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.list-label {
+mat-list-item .list-label {
     margin: 0;
     margin-left: 15px;
 }
@@ -31,4 +31,8 @@ mat-list {
 
 mat-grid-tile {
     overflow: visible;
+}
+
+pxb-hero-banner .pxb-hero-banner {
+  justify-content: space-around;
 }
